@@ -1,25 +1,23 @@
 package ru.otus;
 
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import ru.otus.appcontainer.AppComponentsContainerImpl;
-import ru.otus.appcontainer.api.AppComponentsContainer;
 import ru.otus.config.AppConfig;
-import ru.otus.services.*;
+import ru.otus.services.EquationPreparer;
+import ru.otus.services.IOService;
+import ru.otus.services.PlayerService;
 
 import java.io.PrintStream;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class AppTest {
 
-    @Disabled //надо удалить
     @DisplayName("Из контекста тремя способами должен корректно доставаться компонент с проставленными полями")
     @ParameterizedTest(name = "Достаем по: {0}")
     @CsvSource(value = {"GameProcessor, ru.otus.services.GameProcessor",
@@ -38,7 +36,8 @@ class AppTest {
             "EquationPreparerImpl, ru.otus.services.EquationPreparer",
             "equationPreparer, ru.otus.services.EquationPreparer"
     })
-    public void shouldExtractFromContextCorrectComponentWithNotNullFields(String classNameOrBeanId, Class<?> rootClass) throws Exception {
+    public void shouldExtractFromContextCorrectComponentWithNotNullFields(String classNameOrBeanId,
+                                                                          Class<?> rootClass) throws Exception {
         var ctx = new AppComponentsContainerImpl(AppConfig.class);
 
         assertThat(classNameOrBeanId).isNotEmpty();
@@ -57,13 +56,12 @@ class AppTest {
         var fields = Arrays.stream(component.getClass().getDeclaredFields())
                 .filter(f -> !Modifier.isStatic(f.getModifiers()))
                 .peek(f -> f.setAccessible(true))
-                .collect(Collectors.toList());
+                .toList();
 
-        for (var field: fields){
+        for (var field : fields) {
             var fieldValue = field.get(component);
             assertThat(fieldValue).isNotNull().isInstanceOfAny(IOService.class, PlayerService.class,
                     EquationPreparer.class, PrintStream.class, Scanner.class);
         }
-
     }
 }
